# n-queens-solver

./: CMakeLists.txt  ChessBoard.cpp  ChessBoard.h  README.md  main.cpp
